# class

./: README.md  udemy_regex
DL_transformers/: README.md
PythonCAPI/: README.md
Rmpi/: README.md
autotools/: README.md
aws_practitioner/: README
coursera_RDMA/: README.md
coursera_gcp/: README.md
crt0/: README.md
medium.com_RESTapi_RAils/: README.md
ncurses/: Readme.md
ninja/: README.md
nm_tool/: README.md
oci/: Readme.md
rocm/: README.md
rocm/cmake_cuda/: CMakeLists.txt
rocm/cmake_cuda/src/: CMakeLists.txt  main.cpp  vectorAdd.cu
rocm/cmake_hip/: CMakeLists.txt
rocm/cmake_hip/src/: CMakeLists.txt  vectorAdd.hip
rocm/cmake_hip_only/: CMakeLists.txt
rocm/cmake_hip_only/src/: CMakeLists.txt  helper_hip.h  main.cpp  test.hiph  vectorAdd.hip
rocm/hip_code/: vectorAdd.cpp
shared_lib/: README.md
systemd/: README.md
udemy_100Lectures_on_LinuxKernelProgram/: README.md
udemy_100Lectures_on_LinuxKernelProgram/section_1/: func.c  hello1.c
udemy_100Lectures_on_LinuxKernelProgram/section_10/: Makefile  current.c  online_cpus.c  tasks.c
udemy_100Lectures_on_LinuxKernelProgram/section_11/: Makefile  kthread.c  kthreads.c
udemy_100Lectures_on_LinuxKernelProgram/section_2/: Makefile  alias.c  alias_v.c  module_init_exit.c
udemy_100Lectures_on_LinuxKernelProgram/section_3/: Makefile  arguments.c  parameter_array.c
udemy_100Lectures_on_LinuxKernelProgram/section_4/: Makefile  module1.c  module2.c  symbol1.c  symbol_export.c  symbol_export.h  symbol_export2.c
udemy_100Lectures_on_LinuxKernelProgram/section_6/: Makefile  hello.c
udemy_100Lectures_on_LinuxKernelProgram/section_7/: Makefile  hello.c  hello0.c  printk_limit.c  printk_once.c
udemy_100Lectures_on_LinuxKernelProgram/section_9/: Makefile  bug_test.c  dump_stack.c  oops_test.c  panic_test.c
udemy_AIinfra/: README.md  README_2.md
udemy_ANTLR4/: README.md
udemy_AdvancedC/: Readme.md
udemy_C++DataStructure/: Readme.md
udemy_C++UnitTesting/: README.md
udemy_C++UnitTesting/GoogleTestProject_backup_mock_full/: testRunner.cpp
udemy_C++UnitTesting/Prerequisite/: CMakeLists.txt  LibraryCode.cpp  TestRunner.cpp
udemy_C++UnitTesting/chapt23/: testRunner.cpp
udemy_C++UnitTesting/chapt37/: CMakeLists.txt  main.cpp
udemy_C++UnitTesting/chapt39/: CMakeLists.txt
udemy_C++UnitTesting/chapt51/: CMakeLists.txt
udemy_C++UnitTesting/section_6_callback/: CMakeLists.txt  EmployeeManager.cpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp  testRunner.cpp
udemy_C++UnitTesting/section_6_vector/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  TestRunner.cpp
udemy_CS101/: README.md
udemy_CUDA10/: README.md  utils.h
udemy_CreationalDesignPatterns/: Readme.md
udemy_DissectingRubyOnRails5/: README.md
udemy_ELF/: ReadME.md
udemy_IB/: README.md
udemy_LLM/: README.md
udemy_LLMmech/: README.md
udemy_LLMscratch/: README.md
udemy_LinuxDBG/: README.md
udemy_LinuxDiagTroubleShoot/: Readme.md
udemy_LinuxSysProg/: Readme.md
udemy_LinuxSystemProgram/: Readme.md
udemy_LinuxUserDebugging/: README.md
udemy_LinuxVirus/: README.md
udemy_LinuxX86Assembly/: README.md
udemy_Love2D/: README.md
udemy_NLP/: README.md  Readme.md
udemy_OS/: README.md  Readme.md
udemy_PostgreSQL/: README.md
udemy_QuantumComp/: README.md
udemy_RubyOnRail/: README.md
udemy_SDLC/: Readme.md
udemy_SSL/: README.md
udemy_SW101/: README.md
udemy_amd/: README.md
udemy_anomaly/: README.md
udemy_ansible/: Readme.md
udemy_api_intro/: Readme.md
udemy_asm/: README.md
udemy_assembly/: Readme.md
udemy_bazel/: README.md
udemy_blockchain/: Readme.md
udemy_bokeh/: README.md
udemy_buyingHouse/: README.md
udemy_c/: README.md
udemy_c++_game/: Readme.md
udemy_cmake/: Readme.md
udemy_cmake/chap31/: CMakeLists.txt
udemy_cmake/chap31/my_math_dir/src/: division.cpp
udemy_cmake/chap31/my_print_dir/: CMakeLists.txt
udemy_cmake/extern_test/external_dir/: CMakeLists.txt
udemy_cobol/: README.md
udemy_code_first_game/: Readme.md  game.html
udemy_compilerDesign/: README.md
udemy_compiler_scratch/: Readme.md
udemy_computer/: README.md
udemy_concurrency/: Readme.md
udemy_container/: README.md
udemy_cudaMasterclass/: README.md
udemy_cudaPar/: README.md
udemy_docker/: Readme.md
udemy_elf2/: README.md
udemy_erlang/: README.md
udemy_exploit/: Readme.md
udemy_fisma/: README.md
udemy_fpga_vitis/: README.md  Readme.md
udemy_fundDB/: README.md
udemy_fundNetwork/: README.md
udemy_fundOS/: README.md
udemy_gdb/: README.md
udemy_genAI/: Readme.md
udemy_gimp/: Readme.md
udemy_git/: README.md
udemy_golang/: Readme.md
udemy_haskell/: Readme.md
udemy_hpc/: README.md
udemy_intermedPython/: README.md
udemy_java/: README.md
udemy_javascript/: Readme.md
udemy_jenkins/: Readme.md
udemy_jq/: README.md
udemy_julia/: Readme.md
udemy_juniper/: README.md
udemy_kubernetes/: Readme.md
udemy_kvm/: Readme.md
udemy_langchain/: README.md
udemy_linuxtraining/: Readme.md
udemy_lua/: README.md
udemy_mathLLM/: README.md
udemy_modernC++2/: README.md
udemy_modernc++/: Readme.md
udemy_mongoDB/: ReadME.md
udemy_ncurses/: README.md
udemy_network/: Readme.md
udemy_node.js/: Readme.md
udemy_oauth2/: README.md
udemy_ollama/: README.md
udemy_ontology101/: README.md
udemy_openmp/: README.md
udemy_openstack/: Readme.md
udemy_parLLM/: README.md
udemy_perl/: README.md
udemy_physNemo/: README.md
udemy_prometheus/: README.md
udemy_puppet/: README.md
udemy_pyHPC/: README.md
udemy_pytorch/: README.md
udemy_rapids/: README.md
udemy_regex/: Readme.md
udemy_ruby/: Readme.md
udemy_rust/: Readme.md
udemy_socketprogramming/: Readme.md
udemy_sqlite/: README.md
udemy_stock/: README.md  Readme.md
udemy_structDesignPatt/: Readme.md  Smiley.txt
udemy_tcltk/: README.md
udemy_tensorflow/: README.md
udemy_webapi/: README.md
udemy_x64asm/: README.md
udemy_x86-64asm/: Readme.md
udemy_x86Assembly/: ReadME.md
using_gdb/: Readme.md
youtube_cudacrashcourse/: README.md
youtube_lisp/: Readme.md
(+317 files in other folders)
