project(test_gtest CXX)
cmake_minimum_required(VERSION 2.6)

add_definitions(-std=c++14)
set(GTEST_HOME "/home/hpjeon/sw_local/gtest")
include_directories(${GTEST_HOME}/include)
set(GTEST_INCLUDE_DIR "/home/hpjeon/sw_local/gtest/include")
set(GTEST_LIBRARY "/home/hpjeon/sw_local/gtest/lib/libgtest.a")
set(GTEST_MAIN_LIBRARY "/home/hpjeon/sw_local/gtest/lib/libgtest_main.a")
set(GMOCK_LIBRARY "/home/hpjeon/sw_local/gtest/lib/libgmock.a" "/home/hpjeon/sw_local/gtest/lib/libgmock_main.a" )
find_package(GTest REQUIRED)
message ("GTest_INCLUDE_DIRS= ${GTEST_INCLUDE_DIRS}")
add_library(commonLibrary LibraryCode.cpp)
add_executable(mainApp main.cpp)
target_link_libraries(mainApp commonLibrary)
add_executable(testRunner TestRunner.cpp)
target_link_libraries(testRunner commonLibrary  ${GTEST_LIBRARIES} ${GMOCK_LIBRARY} pthread)
