cmake_minimum_required(VERSION 3.0.0)
project(Calc_project VERSION 1.0.0)
add_subdirectory(my_math_dir)
add_subdirectory(my_print_dir)
add_executable(calculator main.cpp)
set(CMAKE_INSTALL_PREFIX "./install_folder")
target_link_libraries(calculator my_math my_print)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/my_math_dir/inc/addition.h ${CMAKE_CURRENT_SOURCE_DIR}/my_math_dir/inc/division.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/my_math)
